// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots List List 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <ul
      class="List-sc-1cqkmnl-0 eLAYYL"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With compact spacing 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <ul
      class="List-sc-1cqkmnl-0 fopWsv"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <ul
      class="List-sc-1cqkmnl-0 jCgiBP"
      color="red"
    >
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom font size and line height 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <ul
      class="List-sc-1cqkmnl-0 ruAsR"
      color="currentColor"
      font-size="small"
    >
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With left alignment 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <ul
      class="List-sc-1cqkmnl-0 enngwk"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 jlnRPI"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;
